--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.11.0",
+    "@heroicons/react": "^2.0.18",
     "framer-motion": "^10.16.4",
     "next": "latest",
     "react": "latest",
     "react-dom": "latest",
+    "react-hook-form": "^7.47.0",
     "react-simple-typewriter": "^5.0.1",
-    "react-social-icons": "^6.4.0"
+    "react-social-icons": "^6.4.0",
+    "resend": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "latest",
